amenities variations added

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <!-- responsive navbar -->
 
-    <div class="responsive-navbar fixed bg-yellow p-2">
+    <div class="responsive-navbar fixed bg-yellow ">
         <div class="container">
             <div class="navbar-content">
                 <div class="nav-logo">
@@ -1257,9 +1257,15 @@
             <div class="col-md-3 col-xs-12">
                 <img src="img/flower.jpg" class="clip-pentagon" alt="">
             </div>
+
             <div class="col-md-3 col-xs-12">
-                <p class="clip-hexagon">Lorem ipsum dolor sit amet, consectetur adipisicing Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis iusto veritatis voluptate expedita illum facere cupiditate modi molestiae accusamus cum illo tempore possimus vitae molestias, necessitatibus voluptatem ipsam voluptates. Tempore alias, quidem dolore, cumque laborum eius facere nemo maiores animi dolorem aspernatur voluptate quibusdam eos sit veritatis, eaque minus quos tempora optio? Hic nobis aut nesciunt ipsum cupiditate id. Optio saepe vitae id assumenda, rerum, atque aut, expedita repudiandae quos doloribus aspernatur autem aliquid exercitationem ex impedit placeat sed quod magni soluta nobis deserunt tempora. Optio dolores, in perspiciatis ipsam cupiditate molestias ea sed! Consequatur consequuntur vero eaque tempora consectetur?s elit. Magnam ratione ullam quia, nobis adipisci culpa? Quo assumenda ad velit illum! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa sint enim nam ullam deserunt, suscipit temporibus, voluptatibus dolorem distinctio, itaque facere iste ut officia architecto porro laudantium cumque nesciunt tempora id vel animi deleniti quam odio quae? Mollitia, harum ipsam possimus sapiente a modi et provident! Voluptas, cum numquam? Harum est minima quasi aspernatur cum fugit, dolorum unde obcaecati. Eligendi aliquid cupiditate dolorum porro non est id exercitationem vero impedit dolores illo magni alias saepe consequuntur, eius, neque maiores amet, tempora facilis? Fugit nemo vero, similique sint mollitia corrupti corporis quasi soluta explicabo, quam et autem minima nam odit perferendis.</p>
+                <img src="img/flower.jpg" class="clip-hexagon-sharp-top" alt="">
             </div>
+
+            <div class="col-md-3 col-xs-12">
+                <img src="img/flower.jpg" class="clip-hexagon" alt="">
+            </div>
+
              <div class="col-md-3 col-xs-12">
                 <img src="img/flower.jpg" class="clip-heptagon" alt="">
             </div>
