--- a/site1.html
+++ b/site1.html
@@ -64,10 +64,7 @@
                 <h3 class="form-title">Register here for best offers</h3>
                 <input type="text" class="form-input" placeholder="name"> <br> <br>
                 <div class="form-phone-group">
-                    <select name="" id="" class="form-input">
-                        <option value="">india(+91)</option>
-                        <option value="">india(+91)</option>
-                        <option value="">india(+91)</option>
+                    <select dropdown-options="dropdown-options" class="form-input">
                     </select>
                     <input type="text" class="form-input" placeholder="Mobile Number"> <br> <br>
                 </div>
@@ -214,7 +211,7 @@
                         <div class="col-md-9 col-xs-12">
                             <h3 class="mt-3">REQUEST OFFICE / HOME / VIDEO PRESENTATION BY, <br> Sobha Sentosa,
                                 Bangalore</h3>
-                            <button class="btn-orange mt-2" id="myBtn">REQUEST HERE</button>
+                            <button class="btn-orange mt-2" id="myBtn" open-modal="cta">REQUEST HERE</button>
                         </div>
                     </div>
                 </div>
@@ -371,7 +368,7 @@
                                     <span class="font-bold text-primary">1.52 <span class="font-sm">Ctr*</span></span>
                                 </div>
                             </div>
-                            <button class="btn-outlined-primary text-primary">Enquire Now <i
+                            <button class="btn-outlined-primary text-primary" open-modal>Enquire Now <i
                                     class="icon-arrow-right2"></i></button>
                         </div>
                     </div>
@@ -391,7 +388,7 @@
                                         <span>Price</span>
                                         <span>2.51 Cr*</span>
                                     </div>
-                                    <button class="btn-primary text-white">More Details</button>
+                                    <button class="btn-primary text-white" open-modal>More Details</button>
                                 </div>
                                 <div class="price-card-img">
                                     <img src="img/flower.jpg" alt="">
@@ -411,7 +408,7 @@
                                         <span>Price</span>
                                         <span>2.51 Cr*</span>
                                     </div>
-                                    <button class="btn-primary text-white">More Details</button>
+                                    <button class="btn-primary text-white" open-modal>More Details</button>
                                 </div>
                                 <div class="price-card-img">
                                     <img src="img/flower.jpg" alt="">
@@ -431,7 +428,7 @@
                                         <span>Price</span>
                                         <span>2.51 Cr*</span>
                                     </div>
-                                    <button class="btn-primary text-white">More Details</button>
+                                    <button class="btn-primary text-white" open-modal>More Details</button>
                                 </div>
                                 <div class="price-card-img">
                                     <img src="img/flower.jpg" alt="">
@@ -464,7 +461,7 @@
                                 <img src="	https://www.sobha-reality.com/sobha-sentosa/img/floorPlan/floorplan1.webp"
                                     alt="">
                                 <div class="btn overlay">
-                                    <button class="btn center-align" open-modal="open-modal">Request Here</button>
+                                    <button class="btn center-align" open-modal="floor-plan">Request Here</button>
                                 </div>
                             </div>
                         </div>
@@ -473,7 +470,7 @@
                                 <img src="	https://www.sobha-reality.com/sobha-sentosa/img/floorPlan/floorplan2.webp"
                                     alt="">
                                 <div class="btn overlay">
-                                    <button class="btn center-align" open-modal="open-modal">Request Here</button>
+                                    <button class="btn center-align" open-modal="floor-plan">Request Here</button>
                                 </div>
                             </div>
                         </div>
@@ -482,7 +479,7 @@
                                 <img src="	https://www.sobha-reality.com/sobha-sentosa/img/floorPlan/floorplan1.webp"
                                     alt="">
                                 <div class="btn overlay">
-                                    <button class="btn center-align" open-modal="open-modal">Request Here</button>
+                                    <button class="btn center-align" open-modal="floor-plan">Request Here</button>
                                 </div>
                             </div>
                         </div>
@@ -778,16 +775,13 @@
 
         <!-- Modal content -->
         <div class="modal-content">
-            <span class="close" close-modal="close-modal">&times;</span>
+            <span class="close" close-modal>&times;</span>
             <div class="modal-content-form">
                 <form action="" class="form-border-bottom">
-                    <h3 class="form-title">form type 3</h3>
+                    <h3 class="form-title" id="form-title"></h3>
                     <input type="text" class="form-input" placeholder="name"> <br> <br>
                     <div class="form-phone-group">
-                        <select name="" id="" class="form-input">
-                            <option value="">india(+91)</option>
-                            <option value="">india(+91)</option>
-                            <option value="">india(+91)</option>
+                        <select dropdown-options class="form-input">
                         </select>
                         <input type="text" class="form-input" placeholder="Mobile Number"> <br> <br>
                     </div>
@@ -883,13 +877,10 @@
             </div>
             <div class="modal-content-form">
                 <form action="" class="form-border-bottom">
-                    <h3 class="form-title">form type 3</h3>
+                    <h3 class="form-title" form-title>form type 3</h3>
                     <input type="text" class="form-input" placeholder="name"> <br> <br>
                     <div class="form-phone-group mt-2">
-                        <select name="" id="" class="form-input">
-                            <option value="">india(+91)</option>
-                            <option value="">india(+91)</option>
-                            <option value="">india(+91)</option>
+                        <select dropdown-options="dropdown-options" class="form-input">
                         </select>
                         <input type="text" class="form-input mt-2" placeholder="Mobile Number"> <br> <br>
                     </div>
