navbar,banner section added

--- a/sections-html/navbar.html
+++ b/sections-html/navbar.html
@@ -87,9 +87,30 @@
             </div>
         </div>
     </div>
+
+    <hr class="m-2">
+
+    <!-- simple navbar -->
+
+
+    <div class="simple-navbar bg-primary-light-6">
+        <div class="container">
+            <div class="navbar-content-centered">
+                <div class="nav-logo">
+                    <img src="../img/logo/logo.svg" alt="logo">
+                </div>
+            </div>
+        </div>
     </div>
 
     <hr class="m-2">
+
+    </div>
+
+    <hr class="m-2">
+
+    
+
 
     <hr class="m-2">
 
