--- a/site1.html
+++ b/site1.html
@@ -709,6 +709,62 @@ Thane, Mumbai, Maharashtra 421204, India.
          </section>
         <!-- developer-section start -->
 
+         <!-- developer-section start -->
+         <section class="developer-section" id="developer">
+            <div class="container">
+            <div class="main-title">
+                <div class="main-title-head">
+                    <h2>SOBHA SENTOSA</h2>
+                </div>
+                <div class="main-title-content">
+                    <p>New section</p>
+                </div>
+            </div>
+           <div class="developer-content">
+               <div class="row gap-2 bg-green text-white mb-2">
+                    <div class="col-md-6 col-xs-12">
+                        <ul>
+                            <li>jhsdfjkdskjdfkj</li>
+                            <li>jhsdfjkdskjdfkj</li>
+                            <li>jhsdfjkdskjdfkj</li>
+                        </ul>
+                    </div>
+                    <div class="col-md-6 col-xs-12">
+                        <ul>
+                            <li>jhsdfjkdskjdfkj</li>
+                            <li>jhsdfjkdskjdfkj</li>
+                            <li>jhsdfjkdskjdfkj</li>
+                        </ul>
+                    </div>
+               </div>
+               <div class="row gap-2 bg-red text-white">
+                <div class="col-md-4 col-xs-12">
+                    <ul>
+                        <li class="blink">jhsdfjkdskjdfkj</li>
+                        <li>jhsdfjkdskjdfkj</li>
+                        <li>jhsdfjkdskjdfkj</li>
+                    </ul>
+                </div>
+                <div class="col-md-4 col-xs-12">
+                    <ul>
+                        <li>jhsdfjkdskjdfkj</li>
+                        <li>jhsdfjkdskjdfkj</li>
+                        <li>jhsdfjkdskjdfkj</li>
+                    </ul>
+                </div>
+                <div class="col-md-4 col-xs-12">
+                    <ul>
+                        <li>jhsdfjkdskjdfkj</li>
+                        <li>jhsdfjkdskjdfkj</li>
+                        <li>jhsdfjkdskjdfkj</li>
+                    </ul>
+                </div>
+               </div>
+           </div>
+        </div>
+         </section>
+        <!-- developer-section start -->
+
      </div>
     <!-- main content end -->
 
