added changes for form-title

--- a/site1.html
+++ b/site1.html
@@ -345,7 +345,7 @@
                         <div class="card-body text-center">
                             <h4>Rs 60 Lacs*</h4>
                             <p>689 sqft</p>
-                            <button class="btn-primary text-white" open-modal="open-modal">Enquire Now</button>
+                            <button class="btn-primary text-white" open-modal="price-plan">Enquire Now</button>
                         </div>
                     </div>
                 </div>
