--- a/site1.html
+++ b/site1.html
@@ -137,7 +137,7 @@
                     <div class="high-cards">
                         <div class="row gap-2">
                             <div class="col-md-4 col-xs-12">
-                                <div class="card-colored bg-white text-black">
+                                <div class="card-colored mb-3 bg-white text-black">
                                     <div class="card-icon-round">
                                         <span class="icon-office text-purple"></span>
                                     </div>
@@ -149,7 +149,7 @@
 
 
                             <div class="col-md-4 col-xs-12">
-                                <div class="card-colored bg-white text-black">
+                                <div class="card-colored mb-3 bg-white text-black">
                                     <div class="card-icon-round">
                                         <span class="icon-office text-purple"></span>
                                     </div>
@@ -160,7 +160,7 @@
                             </div>
 
                             <div class="col-md-4 col-xs-12">
-                                <div class="card-colored bg-white text-black">
+                                <div class="card-colored mb-3 bg-white text-black">
                                     <div class="card-icon-round">
                                         <span class="icon-office text-purple"></span>
                                     </div>
@@ -171,7 +171,7 @@
                             </div>
 
                             <div class="col-md-4 col-xs-12">
-                                <div class="card-colored bg-white text-black">
+                                <div class="card-colored mb-3 bg-white text-black">
                                     <div class="card-icon-round">
                                         <span class="icon-office text-purple"></span>
                                     </div>
@@ -182,7 +182,7 @@
                             </div>
 
                             <div class="col-md-4 col-xs-12">
-                                <div class="card-colored bg-white text-black">
+                                <div class="card-colored mb-3 bg-white text-black">
                                     <div class="card-icon-round">
                                         <span class="icon-office text-purple"></span>
                                     </div>
