--- a/site1.html
+++ b/site1.html
@@ -60,7 +60,7 @@
                     homes in Sobha Sentosa<br />
                     From ₹ 60 Lacs* onwards</h3>
             </div>
-            <form action="" class="form" style="margin:0 auto ;">
+            <form action="" class="form" style="margin:0 auto ;" >
                 <h3 class="form-title">Register here for best offers</h3>
                 <input type="text" class="form-input" placeholder="name"> <br> <br>
                 <div class="form-phone-group">
@@ -211,7 +211,7 @@
                         <div class="col-md-9 col-xs-12">
                             <h3 class="mt-3">REQUEST OFFICE / HOME / VIDEO PRESENTATION BY, <br> Sobha Sentosa,
                                 Bangalore</h3>
-                            <button class="btn-orange mt-2" id="myBtn" open-modal="cta">REQUEST HERE</button>
+                            <button class="btn-orange mt-2" id="myBtn" data-open-modal="cta">REQUEST HERE</button>
                         </div>
                     </div>
                 </div>
@@ -345,7 +345,7 @@
                         <div class="card-body text-center">
                             <h4>Rs 60 Lacs*</h4>
                             <p>689 sqft</p>
-                            <button class="btn-primary text-white" open-modal="price-plan">Enquire Now</button>
+                            <button class="btn-primary text-white" data-open-modal="price-plan">Enquire Now</button>
                         </div>
                     </div>
                 </div>
@@ -368,7 +368,7 @@
                                     <span class="font-bold text-primary">1.52 <span class="font-sm">Ctr*</span></span>
                                 </div>
                             </div>
-                            <button class="btn-outlined-primary text-primary" open-modal>Enquire Now <i
+                            <button class="btn-outlined-primary text-primary" data-open-modal>Enquire Now <i
                                     class="icon-arrow-right2"></i></button>
                         </div>
                     </div>
@@ -388,7 +388,7 @@
                                         <span>Price</span>
                                         <span>2.51 Cr*</span>
                                     </div>
-                                    <button class="btn-primary text-white" open-modal>More Details</button>
+                                    <button class="btn-primary text-white" data-open-modal>More Details</button>
                                 </div>
                                 <div class="price-card-img">
                                     <img src="img/flower.jpg" alt="">
@@ -408,7 +408,7 @@
                                         <span>Price</span>
                                         <span>2.51 Cr*</span>
                                     </div>
-                                    <button class="btn-primary text-white" open-modal>More Details</button>
+                                    <button class="btn-primary text-white" data-open-modal>More Details</button>
                                 </div>
                                 <div class="price-card-img">
                                     <img src="img/flower.jpg" alt="">
@@ -428,7 +428,7 @@
                                         <span>Price</span>
                                         <span>2.51 Cr*</span>
                                     </div>
-                                    <button class="btn-primary text-white" open-modal>More Details</button>
+                                    <button class="btn-primary text-white" data-open-modal>More Details</button>
                                 </div>
                                 <div class="price-card-img">
                                     <img src="img/flower.jpg" alt="">
@@ -461,7 +461,7 @@
                                 <img src="	https://www.sobha-reality.com/sobha-sentosa/img/floorPlan/floorplan1.webp"
                                     alt="">
                                 <div class="btn overlay">
-                                    <button class="btn center-align" open-modal="floor-plan">Request Here</button>
+                                    <button class="btn center-align" data-open-modal="floor-plan">Request Here</button>
                                 </div>
                             </div>
                         </div>
@@ -470,7 +470,7 @@
                                 <img src="	https://www.sobha-reality.com/sobha-sentosa/img/floorPlan/floorplan2.webp"
                                     alt="">
                                 <div class="btn overlay">
-                                    <button class="btn center-align" open-modal="floor-plan">Request Here</button>
+                                    <button class="btn center-align" data-open-modal="floor-plan">Request Here</button>
                                 </div>
                             </div>
                         </div>
@@ -479,7 +479,7 @@
                                 <img src="	https://www.sobha-reality.com/sobha-sentosa/img/floorPlan/floorplan1.webp"
                                     alt="">
                                 <div class="btn overlay">
-                                    <button class="btn center-align" open-modal="floor-plan">Request Here</button>
+                                    <button class="btn center-align" data-open-modal="floor-plan">Request Here</button>
                                 </div>
                             </div>
                         </div>
@@ -673,7 +673,7 @@
                                             Panathur Main Road - 7 mins</p>
                                     </div>
                                 </div>
-                                <div class="row pt-2">
+                                <div class="row gapX-2 pt-2">
                                     <div class="col-md-3">
                                         <span class=" icon-arrow-up"></span>
                                     </div>
@@ -767,6 +767,7 @@
             </div>
         </div>
     </div>
+    <template id="template"></template>
     <!-- footer section end -->
 
 
