--- a/site1.html
+++ b/site1.html
@@ -565,7 +565,24 @@
                     </div>
 
                     <!-- carousel end -->
+
+                    <br><br>
+
+                    <div class="carousel">
+                        <div class="slides">
+                            <img src="img/gallery/g1.webp" alt="slide image" class="slide">
+                            <img src="img/gallery/g2.webp" alt="slide image" class="slide">
+                            <img src="img/gallery/g3.webp" alt="slide image" class="slide">
+                            <img src="img/gallery/g4.webp" alt="slide image" class="slide">
+                            <img src="img/gallery/g5.webp" alt="slide image" class="slide">
+                        </div>
+                        <div class="controls">
+                            <div class="control prev-slide">&#9668;</div>
+                            <div class="control next-slide">&#9658;</div>
+                        </div>
+                    </div>
                 </div>
+
             </div>
         </section>
         <!-- faq-section start -->
